# honeybot

./: Cargo.toml  README.md
.chglog/: CHANGELOG.tpl.md  VERSION.tpl.md  config.yml
.github/workflows/: binary.yml
src/: bot.rs  lib.rs  main.rs
