[package]
name = "discord_honey_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }

# Testing

serenity = "0.12"
